--- a/static/src/css/calc.css
+++ b/static/src/css/calc.css
@@ -40,7 +40,7 @@ body{
     border: 6px solid #74cc75;
 }
 .advance{
-    background: linear-gradient(#dabb94, #dd7533, #d49a62);
+    background: linear-gradient(#ededed, #bfbfbf, #451e0ab3);
 }
 .cal-font{
     font-size: 25px;
